==> uae-1208/STM32/Hal_Lib/8.SPI/1.LCD_DMA/Core/Src/lcd.c <==
#include "lcd.h"
#include "lcdfont.h"

void LCD_Fill(uint16_t xsta,uint16_t ysta,uint16_t xend,uint16_t yend,uint16_t color)
{          
	uint16_t color1[1],t=1;
	int32_t num,num1;
	color1[0]=color;
	num=(xend-xsta)*(yend-ysta);
	LCD_Address_Set(xsta,ysta,xend-1,yend-1);//设置显示范围
	LCD_CS_Clr();
	SPI1->CR1|=1<<11;//设置SPI16位传输模式
	while(t)
	{
		if(num>65534)
		{
			num-=65534;
			num1=65534;
		}
		else
		{
			t=0;
			num1=num;
		}
		while(num1 > 0)
		{
			while(__HAL_SPI_GET_FLAG(&hspi1,SPI_FLAG_TXE) == RESET);
			SPI1->DR = color1[0];
			num1--;
		}
//		HAL_SPI_Transmit_DMA(&hspi1,(uint8_t*)color1,num1);
//		while(1)
//		{
//			if(__HAL_DMA_GET_FLAG(&hdma_spi1_tx,DMA_FLAG_TCIF3_7)!=RESET)//等待通道4传输完成
//			{
//				__HAL_DMA_CLEAR_FLAG(&hdma_spi1_tx,DMA_FLAG_TCIF3_7);//清除通道3传输完成标志
//				break;
//			}
//		}
	}
	LCD_CS_Set();
	__HAL_SPI_DISABLE(&hspi1);
	SPI1->CR1=~SPI1->CR1;
	SPI1->CR1|=1<<11;
	SPI1->CR1=~SPI1->CR1;//设置SPI8位传输模式
	__HAL_SPI_ENABLE(&hspi1);//使能SPI
}

void LCD_ShowPicture(uint16_t x,uint16_t y,uint16_t length,uint16_t width,const uint8_t pic[])
{
	uint8_t t=1;
	uint32_t num=length*width*2;
	int num1,i = 0;;
	LCD_Address_Set(x,y,x+length-1,y+width-1);
	LCD_CS_Clr();
	
	SPI1->CR1=~SPI1->CR1;
	SPI1->CR1|=1<<11;
	SPI1->CR1=~SPI1->CR1;//设置SPI8位传输模式
	while(t)
	{
	  if(num>65534)
		{
			num-=65534;
			num1=65534;
		}
		else
		{
			t=0;
			num1=num;
		}
		
		hdma_spi1_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
		hdma_spi1_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
		hdma_spi1_tx.Init.MemInc = DMA_MINC_ENABLE;
		HAL_DMA_Init(&hdma_spi1_tx);
		
		while(num1 > 0)
		{
			while(__HAL_SPI_GET_FLAG(&hspi1,SPI_FLAG_TXE) == RESET);
			SPI1->DR = pic[i];
			num1--;
			i++;
		}
		
//		HAL_SPI_Transmit_DMA(&hspi1,(uint8_t*)pic,num1);
//		while(1)
//		{
//			if(__HAL_DMA_GET_FLAG(&hdma_spi1_tx,DMA_FLAG_TCIF3_7)!=RESET)//等待通道4传输完成
//			{
//				__HAL_DMA_CLEAR_FLAG(&hdma_spi1_tx,DMA_FLAG_TCIF3_7);//清除通道3传输完成标志
//				break;
//			}
//		}
		pic+=65534;
	}
	LCD_CS_Set();
}
