==> feicongming/STM32-BadmintonCount/Hardware/LCD/lcd.c <==
#include "lcd.h"
#include "lcd_init.h"
#include "lcdfont.h"
#include "delay.h"
#include "spi.h"
#include "dma.h"
#include "flash.h"

void LCD_Fill(u16 xsta,u16 ysta,u16 xend,u16 yend,u16 color)
{          
	u16 color1[1],t=1;
	u32 num,num1;
	color1[0]=color;
	num=(xend-xsta)*(yend-ysta);
	LCD_Address_Set(xsta,ysta,xend-1,yend-1);//设置显示范围
	LCD_CS_Clr();
	SPI1->CR1|=1<<11;//设置SPI16位传输模式
	SPI_Cmd(SPI1, ENABLE);//使能SPI
	while(t)
	{
		if(num>65534)
		{
			num-=65534;
			num1=65534;
		}
		else
		{
			t=0;
			num1=num;
		}
		MYDMA_Config1(DMA1_Channel3,(u32)&SPI1->DR,(u32)color1,num1);
		SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,ENABLE);
		MYDMA_Enable(DMA1_Channel3);
		while(1)
		{
			if(DMA_GetFlagStatus(DMA1_FLAG_TC3)!=RESET)//等待通道4传输完成
			{
				DMA_ClearFlag(DMA1_FLAG_TC3);//清除通道3传输完成标志
				break;
			}
		}
  }
	LCD_CS_Set();
	SPI1->CR1=~SPI1->CR1;
	SPI1->CR1|=1<<11;
	SPI1->CR1=~SPI1->CR1;//设置SPI8位传输模式
	SPI_Cmd(SPI1, ENABLE);//使能SPI
}

void LCD_ShowPicture(u16 x,u16 y,u16 length,u16 width,const u8 pic[])
{
	u8 t=1;
	u32 num=length*width*2,num1;
	LCD_Address_Set(x,y,x+length-1,y+width-1);
	LCD_CS_Clr();
	while(t)
	{
	  if(num>65534)
		{
			num-=65534;
			num1=65534;
		}
		else
		{
			t=0;
			num1=num;
		}
		MYDMA_Config(DMA1_Channel3,(u32)&SPI1->DR,(u32)pic,num1);
		SPI_I2S_DMACmd(SPI1,SPI_I2S_DMAReq_Tx,ENABLE);
		MYDMA_Enable(DMA1_Channel3);
		while(1)
		{
			if(DMA_GetFlagStatus(DMA1_FLAG_TC3)!=RESET)//等待通道4传输完成
			{
				DMA_ClearFlag(DMA1_FLAG_TC3);//清除通道4传输完成标志
				break; 
			}
		}
		pic+=65534;
	}
	LCD_CS_Set();
}
